feat: fix ts issues and create reservation
